--- a/abrigos.html
+++ b/abrigos.html
@@ -34,7 +34,7 @@
 <h1>
 	<center>
 		<table style> 
-			<tr><th>SKILL</th></tr>
+			<tr><th>SKILLS</th></tr>
 			<tr><th>cyclist</th></tr>
 			<tr><th>sleeping</th></tr>
 			<tr><th>kalas sa ahon</th></tr>
@@ -44,7 +44,7 @@
 </h1>
 <h2><center>
 		<table>
-			<tr><th><a href="Calayag.html">Calayag</a> <br></tr></th>
+			<tr><th><a href="calayag.html">Calayag</a> <br></tr></th>
 			<tr><th><a href="Mabagos.html">Mabagos</a> <br></tr></th>
 			<tr><th><a href="Junio.html">Junio </a> <br></tr></th>
 			<tr><th><a href="Balae.html">Balae</a> <br></tr>/<th>
