--- a/calayag.html
+++ b/calayag.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 
 <title> </title>
@@ -18,9 +16,7 @@
 
 <img src ="ace.jpg" width="200px"> <br>
 
-
-
-
+</center>
 <h1>
 	<center>
 		<table style> 
@@ -49,13 +45,14 @@
 	 </table>
 </h1>
 <h2>
+	<center>
 <a href="Mabagos.html">Mabagos</a> <br>
 <a href="Junio.html">Junio </a> <br>
-<a href="Abrigos.html">Abrigos</a> <br>
+<a href="abrigos.html">Abrigos</a> <br>
 <a href="Balae.html">Balae</a> <br>
 <a href="index.html">BSIT-1A</a> <br>
+	</center>
 </h2>
-</center>
 
 </body>
 </html>
