--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </h1>
 	<center>
 		<table style> 
-			<tr><th><a href="Calayag.html"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/327563932_2593704270770998_8674149935726941681_n.jpg?stp=dst-jpg_s206x206&_nc_cat=108&ccb=1-7&_nc_sid=aee45a&_nc_eui2=AeHj_65CZ2atvRMb_1MLiDLFkyUa-MuIyqSTJRr4y4jKpOwQsXuNdHs-ApqYsqUYKvzDvUvW8uLhUu5U8NVkYuah&_nc_ohc=m7gaW6eysIYAX_wLLGe&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTwf_LjrDylJPxE5yuCcZ7FIvMR8IxfRHlvhlQ6_xoTgw&oe=63FB5BC0"><br><h2>Ace Calayag</h2></br></a></tr></th>
+			<tr><th><a href="calayag.html"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/327563932_2593704270770998_8674149935726941681_n.jpg?stp=dst-jpg_s206x206&_nc_cat=108&ccb=1-7&_nc_sid=aee45a&_nc_eui2=AeHj_65CZ2atvRMb_1MLiDLFkyUa-MuIyqSTJRr4y4jKpOwQsXuNdHs-ApqYsqUYKvzDvUvW8uLhUu5U8NVkYuah&_nc_ohc=m7gaW6eysIYAX_wLLGe&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTwf_LjrDylJPxE5yuCcZ7FIvMR8IxfRHlvhlQ6_xoTgw&oe=63FB5BC0"><br><h2>Ace Calayag</h2></br></a></tr></th>
 		</table>
 		<table style>
 			<tr><th><a href="Mabagos.html"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/327623173_472294258261701_9094251561266243190_n.jpg?stp=dst-jpg_p228x119&_nc_cat=108&ccb=1-7&_nc_sid=aee45a&_nc_eui2=AeGxfka3xjZXNNxCiMleW4M1MNbLI8gUS-8w1ssjyBRL780HrAMG5oW4XTCjbao_oHXjXT_A3KLfgZFm3rAc-7tQ&_nc_ohc=sZZGbcJYlmAAX9mWvfB&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRSf9e0tbOmxc8JAHeU_DlInmjj-2u7Q1ET4IXfLLa3fA&oe=63FB4C0E"><br> <h2>Jamaica Mabagos</h2><br></a></tr></th>
