--- a/Balae.html
+++ b/Balae.html
@@ -49,10 +49,10 @@
 	 </table>
 </h1>
 <h2>
-<a href="Calayag.html">Calayag</a> <br>
+<a href="calayag.html">Calayag</a> <br>
 <a href="Mabagos.html">Mabagos</a> <br>
 <a href="Junio.html">Junio </a> <br>
-<a href="Abrigos.html">Abrigos</a> <br>
+<a href="abrigos.html">Abrigos</a> <br>
 <a href="index.html">BSIT-1A</a> <br>
 </h2>
 </center>
