--- a/Junio.html
+++ b/Junio.html
@@ -49,10 +49,11 @@
 	 </table>
 </h1>
 <h2>
-<a href="Calayag.html">Calayag</a> <br>
+<a href="calayag.html">Calayag</a> <br>
+<a href="calayag.html">Calayag</a> <br>
 <a href="Mabagos.html">Mabagos</a> <br>
 <a href="Balae.html">Balae </a> <br>
-<a href="Abrigos.html">Abrigos</a> <br>
+<a href="abrigos.html">Abrigos</a> <br>
 <a href="index.html">BSIT-1A</a> <br>
 </h2>
 </center>
